Project 3 Quiz App for Android Basics NanoDegree

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,26 +1,28 @@
 <resources>
     <string name="app_name">Quiz Application</string>
     <string name="quizheader">KNOW THE CAPITALS?</string>
-    <string name= "q1">What is the Capital of Nepal?</string>
-    <string name= "q1.op1">Kritipur</string>
-    <string name= "q1.op2">Kantipur</string>
-    <string name= "q1.op3">Kathmandu</string>
-    <string name= "q2">What is the Capital of India?</string>
-    <string name= "q3">Capital of Angola is Malabo. </string>
-    <string name= "q4">How many times has Nigeria changed its capital? </string>
+    <string name="player">Please enter your name.</string>
+    <string name="q1">Which of these cities are capital of Chile? </string>
+    <string name="q1.op1">Valparaiso</string>
+    <string name="q1.op2">Santiago</string>
+    <string name="q1.op3">La Paz</string>
+    <string name="q2">What is the Capital of India?</string>
+    <string name="q3">Capital of Angola is Malabo. </string>
+    <string name="q4">How many times has Nigeria changed its capital? </string>
     <string name="scroll">Scroll and click to select number</string>
-<string name="hint">Type Here</string>
-<string name ="option1"> True</string>
-<string name="option2">False</string>
-    <string name= "q5"> Name the capital of Malta.</string>
-    <string name= "q6">Which city is considered capital of Europe? </string>
-    <string name= "q6.op1">Amsterdam</string>
-    <string name= "q6.op2">Brussells</string>
-    <string name= "q6.op3">Berlin</string>
-    <string name= "q7">What is the Capital of Tanzania?</string>
-    <string name= "q7.op1">Dodomo</string>
-    <string name= "q7.op2">Nairobi</string>
-    <string name= "q7.op3">Bujumbura</string>
-    <string name= "q8">When was Washington DC declared capital of america </string>
-<string name="submit">Submit Answers</string>
+    <string name="hint">Type Here</string>
+    <string name="option1"> True</string>
+    <string name="option2">False</string>
+    <string name="q5"> Name the capital of Malta.</string>
+    <string name="q6">Which of these are capitals of South Africa? </string>
+    <string name="q6.op1">Pretoria</string>
+    <string name="q6.op2">Johannesburg</string>
+    <string name="q6.op3">Cape Town</string>
+    <string name="q7">What is the Capital of Tanzania?</string>
+    <string name="q7.op1">Dodomo</string>
+    <string name="q7.op2">Nairobi</string>
+    <string name="q7.op3">Bujumbura</string>
+    <string name="q8">When was Manila declared capital of Philippines </string>
+    <string name="submit">Submit Answers</string>
+    <string name="toastMessage"> Hello %1$s! You answered %2$d questions correctly out of 8.\nAll incorrectly answered questions are highlighted in red.</string>
 </resources>
